[gd_scene load_steps=8 format=3 uid="uid://b5pxvm1x282br"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_hrrpa"]
[ext_resource type="FontFile" uid="uid://e72bgarhntsx" path="res://Font/PixelifySans-Regular.ttf" id="2_3qx6m"]
[ext_resource type="PackedScene" uid="uid://cxqn0oe1ro2jr" path="res://Scenes/Mango.tscn" id="3_7q1ou"]
[ext_resource type="Script" path="res://Scripts/MangoMenu.gd" id="4_jfmjf"]
[ext_resource type="PackedScene" uid="uid://cy6qck4q6st7r" path="res://Scenes/Rat.tscn" id="5_lgsuy"]

[sub_resource type="Curve2D" id="Curve2D_ouufs"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1014, 353, 0, 0, 0, 0, 835, 355, 0, 0, 0, 0, 1014, 353)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_jl66f"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1054, 226, 80.8661, -78.4877, -80.8661, 78.4877, 1055, 503, 38.0546, 24.9733, -38.0546, -24.9733, 790, 505, -112.975, 96.3258, 112.975, -96.3258, 791, 226, 0, 0, 0, 0, 1054, 226)
}
point_count = 5

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = 5.0
offset_right = -3.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hrrpa")
metadata/_edit_lock_ = true

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 325.0
offset_right = 704.0
offset_bottom = 380.0
theme_override_fonts/font = ExtResource("2_3qx6m")
theme_override_font_sizes/font_size = 21
text = "Come√ßar"
metadata/_edit_lock_ = true

[node name="Leave" type="Button" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 454.0
offset_right = 704.0
offset_bottom = 510.0
theme_override_fonts/font = ExtResource("2_3qx6m")
theme_override_font_sizes/font_size = 21
text = "Sair"
metadata/_edit_lock_ = true

[node name="Instruction" type="Button" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 389.0
offset_right = 704.0
offset_bottom = 444.0
theme_override_fonts/font = ExtResource("2_3qx6m")
theme_override_font_sizes/font_size = 21
text = "Como Jogar"
metadata/_edit_lock_ = true

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_ouufs")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(1014, 353)
rotates = false

[node name="Mango" parent="Path2D/PathFollow2D" instance=ExtResource("3_7q1ou")]
position = Vector2(0, 10)
script = ExtResource("4_jfmjf")

[node name="Path2D2" type="Path2D" parent="."]
curve = SubResource("Curve2D_jl66f")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D2"]
position = Vector2(1054, 226)
rotates = false

[node name="Rat" parent="Path2D2/PathFollow2D" instance=ExtResource("5_lgsuy")]
position = Vector2(0, -46)

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Leave" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="Instruction" to="." method="_on_instruction_pressed"]
